# sts_bot

./: README.md  conda-recipe.yaml  config.properties  main.py  manual_run.py  pyproject.toml
sts_bot/agent/: agent.py
sts_bot/agent/prompts/: dynamic_prompt.yaml  examples.yaml  general_prompt.yaml  prompt_generator.py
sts_bot/communication/: __init__.py  communicator.py  receiver.py  sender.py
sts_bot/helper/: constants.py
sts_bot/logging/: logger.py
sts_bot/runner/: agentic_runner.py  base_runner.py  manual_runner.py
sts_bot/sts/constants/: events.py
sts_bot/sts/gamestate/: __init__.py  card.py  combat_state.py  deck.py  game_state.py  map.py  monster.py  player.py  potion.py  power.py  received_state.py  relic.py  screen_state.py
