[project]
name = "sts_bot"
version = "0.1.0"
readme = "README.md"
description = "A package that allows an LLM to play slay the spire."


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sts_bot"]

[tool.black]
verbose = true
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \__pycache__
)/
'''
preview = true
